--- a/client/src/features/animes/animes.css
+++ b/client/src/features/animes/animes.css
@@ -4,4 +4,5 @@
     overflow: auto;
     max-height: 650px;
     border: solid white 1px;
+    border-radius: 5px;
 }
